force-app/main/default/objects/Learning_program__c/Learning_program__c.object-meta.xml
<CustomObject>
    <label>תכנית לימוד ללקוח</label>
    <nameField>
        <displayFormat>LP-{00000}</displayFormat>
        <label>מס Learning program</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>תכניות לימוד ללקוח</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>