force-app/main/default/objects/Learning_program__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>הערות</label>
    <length>250</length>
    <type>Text</type>
</CustomField>