force-app/main/default/objects/Learning_program__c/fields/Failed__c.field-meta.xml
<CustomField>
    <fullName>Failed__c</fullName>
    <label>כישלון</label>
    <summaryFilterItems>
        <field>Learning_Program_Subjects__c.Pass_or_Fail__c</field>
        <operation>equals</operation>
        <value>נכשל</value>
    </summaryFilterItems>
    <summaryForeignKey>Learning_Program_Subjects__c.LearningProgram__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>