force-app/main/default/objects/Learning_program__c/fields/Failed_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Failed_Percentage__c</fullName>
    <formula>if(Failed__c =0,0, Failed__c /  Num_of_Subjects__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Failed Percentage</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>