force-app/main/default/objects/Learning_program__c/fields/Not_Completed_Yet__c.field-meta.xml
<CustomField>
    <fullName>Not_Completed_Yet__c</fullName>
    <formula>Num_of_Subjects__c  -  Success__c - Failed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Completed Yet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>