force-app/main/default/objects/Learning_program__c/fields/Num_of_Subjects__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Subjects__c</fullName>
    <label>מספר המקצועות</label>
    <summaryForeignKey>Learning_Program_Subjects__c.LearningProgram__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>