force-app/main/default/objects/Learning_program__c/fields/Num_of_successes__c.field-meta.xml
<CustomField>
    <fullName>Num_of_successes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Num of successes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>