force-app/main/default/objects/Learning_program__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>סטטוס</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>פעילה</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>סגורה</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <label>לא פעילה</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>מבוטלת</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>