force-app/main/default/objects/Learning_program__c/fields/Student_Status__c.field-meta.xml
<CustomField>
    <fullName>Student_Status__c</fullName>
    <formula>if( Success__c &gt;0 &amp;&amp; Success__c = Num_of_Subjects__c , &apos;עבר/ה בהצלחה&apos;, if( Failed__c &gt;0 &amp;&amp; Failed__c =Num_of_Subjects__c, &apos;נכשל/ה&apos;, if(Success__c &gt;0 || Failed__c &gt;0, &apos;תכנית הלימוד לא הושלמה&apos;, &apos;תכנית הלימוד לא החלה&apos;)))</formula>
    <label>Student Status</label>
    <type>Text</type>
</CustomField>