force-app/main/default/objects/Learning_program__c/fields/Success_and_Failed__c.field-meta.xml
<CustomField>
    <fullName>Success_and_Failed__c</fullName>
    <formula>Success_Percentage__c + Failed_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success and Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>